--- a/Historia2.html
+++ b/Historia2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <!--
-        Historia de Iberdrola (Resumido)
+        Historia de Iberdrola (Pagina 2)
     -->
     <head>
         <!-- Tag meta obligatoria -->
@@ -62,7 +62,7 @@
             </nav>
 
             <div class = "title">
-                <h1>Historia</h1>
+                <h1>Historia (Pagina 2)</h1>
             </div>
         </header>
             
@@ -70,7 +70,7 @@
             <i>ALERTA: </i>Ahora mismo este web está en versión <b>2.0</b>.
         </div>
 
-        <p>Este es un pequeño extracto de la web oficial de la parte "Energética del Futuro". Si te interesa lo que está leyendo, 
+        <p>Este es un pequeño extracto de la web oficial de la parte "Green Recovery". Si te interesa lo que está leyendo, 
             puedes leer más en 
             <a href = "https://www.iberdrola.com/conocenos" target = "_blank">iberdrola.com/conocenos</a>:
         </p>
@@ -79,31 +79,29 @@
         <!-- 
             Extraido del web
         -->
-        <p class="entradilla">El grupo Iberdrola ha protagonizado una profunda transformación, anticipándose en 20 años a la actual transición energética para hacer frente a los retos del cambio climático y a la necesidad de un modelo de negocio limpio, confiable e inteligente. Hoy en día, es líder en renovables y redes inteligentes, tiene una cartera diversificada de negocios y geografías, está presente en países con alto <span class="cursiva_texto">rating</span> y ha demostrado su fortaleza financiera y su experiencia y capacidad de ejecución. Asimismo, un 90 % del plan de inversión a largo plazo del grupo está alineado con los criterios de inversión verde incluidos en la taxonomía de la Unión Europea.</p>
+        <p>Es una alianza suscrita por gran variedad de agentes de ámbito europeo —firmada por ministros, parlamentarios de todos los partidos, consejeros delegados, ONG, académicos, etc.— e impulsada por Pascal Canfin (Parlamento Europeo) que <span>aboga por definir e implementar paquetes verdes de recuperación económica que actúen como aceleradores de la transición hacia la neutralidad climática</span> y unos ecosistemas sanos.</p>
         <!--
             Fin de texto extraido del web
         -->
         </aside>
 
-        <p align = "middle"><img src = "Recursos/Historia.PNG" style = "height:600px;width:600px;"></p>
+        <p align = "middle"><img src = "Recursos/Historia2.PNG" style = "height:600px;width:600px;"></p>
 
         <nav aria-label="...">
             <ul class="pagination justify-content-center">
-              <li class="page-item disabled">
-                <span class="page-link">Previous</span>
+              <li class="page-item">
+                <a class="page-link" href="Historia.html" tabindex="-1">Previous</a>
               </li>
+              <li class="page-item"><a class="page-link" href="Historia.html">1</a></li>
               <li class="page-item active">
-                <a class="page-link" href="Historia.html">1 <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="page-item"><a class="page-link" href="Historia2.html">2</a>
+                <a class="page-link" href="Historia2.html">2 <span class="sr-only">(current)</span></a>
               </li>
               <li class="page-item"><a class="page-link" href="Historia3.html">3</a></li>
               <li class="page-item">
-                <a class="page-link" href="Historia2.html">Next</a>
+                <a class="page-link" href="Historia3.html">Next</a>
               </li>
             </ul>
           </nav>
-
 
         <form action>
             <p align = "middle"><button type = "submit" class = "btn btn-outline-primary" formaction = "index.html">Volver Atras</button></p>
