--- a/Cuestionario.html
+++ b/Cuestionario.html
@@ -4,17 +4,23 @@
         Cuestionario
     -->
     <head>
+        <!-- Tag meta obligatoria -->
         <meta http-equiv=”Content-Type” content="text/html"; charset="UTF-8"/>
+
+        <!-- Boostrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
         <title>IBERDROLA: Cuestionario</title>
         <style>
             #myBody{
                 margin: 50px;
+                background-color: aliceblue;
             }
 
             h1 {text-align:center;}
         </style>
     </head>
-    <body id = "myBody" style = "background-color: aliceblue;">
+    <body id = "myBody">
         <h1>Cuestionario</h1>
 
         <form action = "send.html" method="post" id = "signup">
@@ -59,7 +65,7 @@
 
         <form action>
             <p align = "middle">
-            <button type = "submit" formaction = "index.html">Volver Atras</button>
+            <button type = "submit" class = "btn btn-danger" formaction = "index.html">Volver Atras</button>
             </p>
         </form>
 
