--- a/Historia3.html
+++ b/Historia3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <!--
-        Historia de Iberdrola (Resumido)
+        Historia de Iberdrola (Pagina 3)
     -->
     <head>
         <!-- Tag meta obligatoria -->
@@ -62,7 +62,7 @@
             </nav>
 
             <div class = "title">
-                <h1>Historia</h1>
+                <h1>Historia (Pagina 3)</h1>
             </div>
         </header>
             
@@ -70,7 +70,7 @@
             <i>ALERTA: </i>Ahora mismo este web está en versión <b>2.0</b>.
         </div>
 
-        <p>Este es un pequeño extracto de la web oficial de la parte "Energética del Futuro". Si te interesa lo que está leyendo, 
+        <p>Este es un pequeño extracto de la web oficial de la parte "Lineas de Negocio". Si te interesa lo que está leyendo, 
             puedes leer más en 
             <a href = "https://www.iberdrola.com/conocenos" target = "_blank">iberdrola.com/conocenos</a>:
         </p>
@@ -79,31 +79,29 @@
         <!-- 
             Extraido del web
         -->
-        <p class="entradilla">El grupo Iberdrola ha protagonizado una profunda transformación, anticipándose en 20 años a la actual transición energética para hacer frente a los retos del cambio climático y a la necesidad de un modelo de negocio limpio, confiable e inteligente. Hoy en día, es líder en renovables y redes inteligentes, tiene una cartera diversificada de negocios y geografías, está presente en países con alto <span class="cursiva_texto">rating</span> y ha demostrado su fortaleza financiera y su experiencia y capacidad de ejecución. Asimismo, un 90 % del plan de inversión a largo plazo del grupo está alineado con los criterios de inversión verde incluidos en la taxonomía de la Unión Europea.</p>
+        <p class="entradilla">El grupo Iberdrola avanza en su histórico plan inversor de 75.000 millones de euros hasta 2025, que ha ampliado a 150.000 millones para 2030. El 90 % de su inversión a 2025 (68.000 millones) será orgánica y se repartirá entre sus tres líneas de negocio: el 51 % irá a parar al área de Renovables, el 40 % a Redes y el 9 % a Generación y Clientes. La compañía planea triplicar su capacidad renovable hasta los 95 GW, duplicar sus activos de redes hasta los 60.000 millones de euros y aumentar su base de clientes hasta los 70 millones de contratos durante esta década. Un 90 % del plan a largo plazo del grupo está alineado con la taxonomía verde de la Unión Europea.</p>
         <!--
             Fin de texto extraido del web
         -->
         </aside>
 
-        <p align = "middle"><img src = "Recursos/Historia.PNG" style = "height:600px;width:600px;"></p>
+        <p align = "middle"><img src = "Recursos/Historia3.PNG" style = "height:600px;width:600px;"></p>
 
         <nav aria-label="...">
             <ul class="pagination justify-content-center">
-              <li class="page-item disabled">
-                <span class="page-link">Previous</span>
-              </li>
-              <li class="page-item active">
-                <a class="page-link" href="Historia.html">1 <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="page-item"><a class="page-link" href="Historia2.html">2</a>
-              </li>
-              <li class="page-item"><a class="page-link" href="Historia3.html">3</a></li>
               <li class="page-item">
-                <a class="page-link" href="Historia2.html">Next</a>
+                <a class="page-link" href="Historia2.html" tabindex="-1">Previous</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="Historia.html">1</a></li>
+              <li class="page-item"><a class = "page-link" href="Historia2.html">2</a></li>
+              <li class="page-item active">
+                <a class="page-link" href="Historia3.html">3 <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="page-item disabled">
+                <a class="page-link">Next</a>
               </li>
             </ul>
           </nav>
-
 
         <form action>
             <p align = "middle"><button type = "submit" class = "btn btn-outline-primary" formaction = "index.html">Volver Atras</button></p>
