--- a/Cuestionario.html
+++ b/Cuestionario.html
@@ -23,6 +23,13 @@
     <body id = "myBody">
         <h1>Cuestionario</h1>
 
+        <div class = "header">
+            <div class = "alert alert-danger" role = "alert">
+                <i>ALERTA: El cuestionario <ins>NO</ins> funciona.</i>
+                <br> Disculpa por las molestias.
+            </div>
+        </div>
+
         <form action = "send.html" method="post" id = "signup">
             <div class = "field">
                 <label for="name">Nombre(s):</label>
