--- a/Historia2.html
+++ b/Historia2.html
@@ -21,6 +21,10 @@
                 background-color: white;
             }
 
+            .badge {
+                color:black;
+            }
+
             /* a class */
             .menu{font-size: 20px}
 
@@ -56,9 +60,12 @@
             
         <div class = "alert alert-warning" role = "alert">
             <i>ALERTA: </i>Ahora mismo este web está en versión <b>2.0</b>.
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">50% completado</div>
+            </div>
         </div>
 
-        <p>Este es un pequeño extracto de la web oficial de la parte "Green Recovery". Si te interesa lo que está leyendo, 
+        <p>Este es un pequeño extracto de la web oficial de la parte <span class = "badge badge-primary">"Green Recovery"</span>. Si te interesa lo que está leyendo, 
             puedes leer más en 
             <a href = "https://www.iberdrola.com/conocenos" target = "_blank">iberdrola.com/conocenos</a>:
         </p>
