--- a/Servicios.html
+++ b/Servicios.html
@@ -64,12 +64,27 @@
 
         <div class = "alert alert-warning" role = "alert">
             <i>ALERTA: </i>Ahora mismo este web está en versión <b>2.0</b>.
+            <br> El botón "Iberdrola en Cifras" <b>NO</b> funciona.
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">50% completado</div>
+            </div>
         </div>
 
         <p>Iberdrola innova el uso de renovables para la vida diaria de cualquiera persona. Actualmente operamos en estas zonas:
         </p>
 
-        <p align = "center"><img src = "Recursos/Operaciones.PNG" style = "height:400px;width:400px;"></p>
+        <p align = "center"><img src = "Recursos/Operaciones.png" style = "height:400px;width:400px;"></p>
+
+        <p align = "center">
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="informacion" aria-expanded="false" aria-controls="collapseExample">
+              Iberdrola en Cifras
+            </button>
+        </p>
+          <div class="collapse" id="informacion">
+            <div class="card card-body">
+                Efectos como los ajustes en la fiscalidad por impuestos y tasas en España y Reino Unido, junto con el impacto del RDL 17/2021 en España (-114 M€), así como otros extraordinarios (COVID), reducen el beneficio neto reportado, mientras que el ajustado crece un 5,2 % hasta los 2.688 millones. El beneficio bruto de explotación (Ebitda) también crece un 10,7 % hasta los 8.165 millones. Estos resultados han sido impulsados por unas inversiones récord de 7.036 millones (+6 %), un 90 % de ellas dirigidas al desarrollo de nuevos proyectos renovables, almacenamiento y redes inteligentes; las inversiones en redes han incrementado un 27 %, hasta los 3.185 millones. En cuanto a los ingresos, el 70 % proceden de mercados con rating A. Asimismo, la compañía ha realizado compras a proveedores por valor de 22.000 millones desde enero de 2020 y contribuye a mantener 400.000 empleos en el mundo. Por otra parte, de la capacidad prevista a 2025, más de 22.000 MW (el 82 %) se encuentran ya instalados, en construcción o con un alto grado de maduración.
+            </div>
+          </div>
 
         <p>Estos son algunos servicios disponibles en España:</p>
 
