--- a/Tarifas.html
+++ b/Tarifas.html
@@ -50,6 +50,9 @@
 
         <div class = "alert alert-warning" role = "alert">
             <i>ALERTA: </i>Ahora mismo este web está en versión <b>2.0</b>.
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">50% completado</div>
+            </div>
         </div>
         
 
