--- a/Tarifas.html
+++ b/Tarifas.html
@@ -8,7 +8,7 @@
         <meta http-equiv=”Content-Type” content="text/html"; charset="UTF-8"/>
 
         <!-- Boostrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="./libs/boostrap.css" rel="stylesheet">
 
         <title>IBERDROLA: Tarifas</title>
         <style>
@@ -39,6 +39,7 @@
                     <a class="nav-item nav-link" href="Historia.html">Historia</a>
                     <a class="nav-item nav-link" href="Servicios.html">Servicios</a>
                     <a class="nav-item nav-link active" href="Tarifas.html">Tarifas <span class="sr-only">(Actual)</span></a>
+                    <a class="nav-item nav-link" href="Opinion.html">Opiniones Clientes</a>
                   </div>
                 </div>
               </nav>
@@ -49,9 +50,9 @@
         </header>
 
         <div class = "alert alert-warning" role = "alert">
-            <i>ALERTA: </i>Ahora mismo este web está en versión <b>2.0</b>.
+            <i>ALERTA: </i>Ahora mismo este web está en versión <b>3.0</b>.
             <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">50% completado</div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75% completado</div>
             </div>
         </div>
         
